assets/css/main.css
/* ... */
		@media screen and (max-width: 736px) {

			.row {
				display: flex;
				flex-wrap: wrap;
				box-sizing: border-box;
				align-items: stretch;
			}

				.row > * {
					box-sizing: border-box;
				}

				.row.gtr-uniform > * > :last-child {
					margin-bottom: 0;
				}

				.row.aln-left {
					justify-content: flex-start;
				}

				.row.aln-center {
					justify-content: center;
				}

				.row.aln-right {
					justify-content: flex-end;
				}

				.row.aln-top {
					align-items: flex-start;
				}

				.row.aln-middle {
					align-items: center;
				}

				.row.aln-bottom {
					align-items: flex-end;
				}

				.row > .imp-small {
					order: -1;
				}

				.row > .col-1-small {
					width: 8.33333%;
				}

				.row > .off-1-small {
					margin-left: 8.33333%;
				}

				.row > .col-2-small {
					width: 16.66667%;
				}

				.row > .off-2-small {
					margin-left: 16.66667%;
				}

				.row > .col-3-small {
					width: 25%;
				}

				.row > .off-3-small {
					margin-left: 25%;
				}

				.row > .col-4-small {
					width: 33.33333%;
				}

				.row > .off-4-small {
					margin-left: 33.33333%;
				}

				.row > .col-5-small {
					width: 41.66667%;
				}

				.row > .off-5-small {
					margin-left: 41.66667%;
				}

				.row > .col-6-small {
					width: 50%;
				}

				.row > .off-6-small {
					margin-left: 50%;
				}

				.row > .col-7-small {
					width: 58.33333%;
				}

				.row > .off-7-small {
					margin-left: 58.33333%;
				}

				.row > .col-8-small {
					width: 66.66667%;
				}

				.row > .off-8-small {
					margin-left: 66.66667%;
				}

				.row > .col-9-small {
					width: 75%;
				}

				.row > .off-9-small {
					margin-left: 75%;
				}

				.row > .col-10-small {
					width: 83.33333%;
				}

				.row > .off-10-small {
					margin-left: 83.33333%;
				}

				.row > .col-11-small {
					width: 91.66667%;
				}

				.row > .off-11-small {
					margin-left: 91.66667%;
				}

				.row > .col-12-small {
					width: 100%;
				}

				.row > .off-12-small {
					margin-left: 100%;
				}

				.row.gtr-0 {
					margin-top: 0em;
					margin-left: 0em;
				}

					.row.gtr-0 > * {
						padding: 0em 0 0 0em;
					}

					.row.gtr-0.gtr-uniform {
						margin-top: 0em;
					}

						.row.gtr-0.gtr-uniform > * {
							padding-top: 0em;
						}

				.row.gtr-25 {
					margin-top: -0.3125em;
					margin-left: -0.3125em;
				}

					.row.gtr-25 > * {
						padding: 0.3125em 0 0 0.3125em;
					}

					.row.gtr-25.gtr-uniform {
						margin-top: -0.3125em;
					}

						.row.gtr-25.gtr-uniform > * {
							padding-top: 0.3125em;
						}

				.row.gtr-50 {
					margin-top: -0.625em;
					margin-left: -0.625em;
				}

					.row.gtr-50 > * {
						padding: 0.625em 0 0 0.625em;
					}

					.row.gtr-50.gtr-uniform {
						margin-top: -0.625em;
					}

						.row.gtr-50.gtr-uniform > * {
							padding-top: 0.625em;
						}

				.row {
					margin-top: -1.25em;
					margin-left: -1.25em;
				}

					.row > * {
						padding: 1.25em 0 0 1.25em;
					}

					.row.gtr-uniform {
						margin-top: -1.25em;
					}

						.row.gtr-uniform > * {
							padding-top: 1.25em;
						}

				.row.gtr-150 {
					margin-top: -1.875em;
					margin-left: -1.875em;
				}

					.row.gtr-150 > * {
						padding: 1.875em 0 0 1.875em;
					}

					.row.gtr-150.gtr-uniform {
						margin-top: -1.875em;
					}

						.row.gtr-150.gtr-uniform > * {
							padding-top: 1.875em;
						}

				.row.gtr-200 {
					margin-top: -2.5em;
					margin-left: -2.5em;
				}

					.row.gtr-200 > * {
						padding: 2.5em 0 0 2.5em;
					}

					.row.gtr-200.gtr-uniform {
						margin-top: -2.5em;
					}

						.row.gtr-200.gtr-uniform > * {
							padding-top: 2.5em;
						}

		}

/* Basic */

	html {
		box-sizing: border-box;
	}

	*, *:before, *:after {
		box-sizing: inherit;
	}

	body {
		background-image: url("images/overlay.png"), url("images/bg.jpg");
		background-repeat: repeat, no-repeat;
		background-size: auto, 100% 100%;
		background-attachment: fixed;
		overflow-y: scroll;
	}
	/* vvv spooky stuff - remove after Halloween vvv */
	:root {
		--animation-time: 20s; 
	  }
	body {
		background-image: url("images/overlay.png"), url("images/spooky.jpg");
		background-repeat: repeat, no-repeat;
		background-size: auto, cover;
		background-attachment: fixed;
		overflow-y: scroll;
		animation-duration: var(--animation-time);
		animation-name: lightning;
		animation-iteration-count: infinite;
	}
	@keyframes lightning {
		0% {backdrop-filter: brightness(1);}
		49% {backdrop-filter: brightness(1);}
		50% {backdrop-filter: brightness(3);}
		51% {backdrop-filter: brightness(1);}
		85% {backdrop-filter: brightness(1);}
		86% {backdrop-filter: brightness(3);}
		87% {backdrop-filter: brightness(1);}
		88% {backdrop-filter: brightness(1);}
		89% {backdrop-filter: brightness(3);}
		93% {backdrop-filter: brightness(1);}
		100% {backdrop-filter: brightness(1);}
	}
	/* ^^^ spooky stuff - remove after Halloween ^^^ */


		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
			-moz-animation: none !important;
			-webkit-animation: none !important;
			-ms-animation: none !important;
			animation: none !important;
			-moz-transition: none !important;
			-webkit-transition: none !important;
			-ms-transition: none !important;
			transition: none !important;
		}

	body, input, textarea, select {
		font-family: 'Source Sans Pro', sans-serif;
		font-weight: 300;
		color: #777777;
		font-size: 20pt;
		line-height: 1.75em;
	}

		@media screen and (max-width: 1680px) {

			body, input, textarea, select {
				font-size: 15pt;
			}

		}

		@media screen and (max-width: 1280px) {

			body, input, textarea, select {
				font-size: 14pt;
			}

		}

		@media screen and (max-width: 736px) {

			body, input, textarea, select {
				font-size: 12pt;
			}

		}

		@media screen and (max-width: 360px) {

			body, input, textarea, select {
				font-size: 11pt;
			}

		}
/* ... */

